# zig-pico

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.zig  picosdk.zig
example/: blink.pio  main.zig
src/: Library.zig  cmake.zig  entry.c  libs.zig  main.zig  pico.zig  sdk.zig  util.zig
zig-out/uf2/: pico-app.uf2
